Fix width on widget in css for the title for books w/out covers
git-svn-id: http://plugins.svn.wordpress.org/google-bookshelves/trunk@662362 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/google_bookshelves_styles.css
+++ b/google_bookshelves_styles.css
@@ -3,6 +3,7 @@
 }
 .google_bookshelves_widget_book {
 	position: relative;
+	width: 128px;
 	margin: 10px;
 }
 .google_bookshelves_widget_book img {
